Item1862: try to speed up configure by changing javascript to jquery; some small changes to texts
git-svn-id: http://svn.foswiki.org/trunk@5733 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/base.css
+++ b/core/lib/Foswiki/Configure/resources/base.css
@@ -19,7 +19,7 @@ margin:0;
 padding:0;
 }
 
-.foswikiAlert, {
+.foswikiAlert {
 color:red;
 }
 
@@ -33,6 +33,7 @@ font-size:94%;
 }
 
 html body {
+font-family:arial, sans-serif;
 voice-family:inherit;
 font-size:small;
 }
@@ -198,8 +199,4 @@ padding-left:2em;
 
 .foswikiHidden,.foswikiMakeVisible,.foswikiMakeVisibleBlock {
 display:none;
-}
-
-.foswikiValueChanged { 
-  border: 2px solid red;
 }
