--- a/core/lib/Foswiki/Configure/templates/authorize.tmpl
+++ b/core/lib/Foswiki/Configure/templates/authorize.tmpl
@@ -122,7 +122,7 @@
 </#assign>
 
 <#assign localNoUpdate>
-	<h2>You did not make any changes!</h2>
+	<h2>Nothing to save - you haven't made any changes yet</h2>
 	<p>Go back in your browser to continue.</p>
 </#assign>
 
