--- a/core/lib/Foswiki/Configure/templates/pagebegin.tmpl
+++ b/core/lib/Foswiki/Configure/templates/pagebegin.tmpl
@@ -21,7 +21,7 @@
 	%INCLUDE{foswikiStyles.js}%
 	var styleText = '<style type="text/css" media="all">/* toggling visibility of blocks; show all blocks by removing the style configureShowOneSection from the body tag */ body.configureShowOneSection .configureToggleSection { display:none; } body.configureShowOneSection .configureShowSection { display:block; }<\/style>';
 	document.write(styleText);
-	%INCLUDE{behaviour.js}%
+	%INCLUDE{jquery-1.3.2.js}%
 	%INCLUDE{scripts.js}%
 	//]]>
 	</script>
