--- a/core/lib/Foswiki/Configure/resources/pattern.css
+++ b/core/lib/Foswiki/Configure/resources/pattern.css
@@ -287,6 +287,7 @@ blockquote h2 {
 
 .foswikiInputField:active,.foswikiInputField:focus,.foswikiInputFieldFocus {
 	background-color:#ffffe0;
+	color:#000;
 }
 
 .foswikiSelect {
