Item8306: quick hack for loaded-on-demand images for extensions
git-svn-id: http://svn.foswiki.org/trunk@5765 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -576,3 +576,8 @@ div.configureMessageBox {
 .configureSectionValues .foswikiValueChanged { 
 
 }
+
+/* Extension popup images */
+#extensionImage {
+  padding: 7px;
+}
