Item8360: a smidgin more cleverness
git-svn-id: http://svn.foswiki.org/trunk@5766 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -578,6 +578,9 @@ div.configureMessageBox {
 }
 
 /* Extension popup images */
-#extensionImage {
+.extensionImage {
   padding: 7px;
+  position: absolute;
+  z-index: 100;
+  display: none;
 }
