--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -24,8 +24,12 @@
 
 %TMPL:DEF{"windowtitle"}%<title>%TMPL:P{"titleaction"}% <nop>%BASETOPIC%%TMPL:P{"titlesep"}%%BASEWEB%%TMPL:P{"titlesep"}%<nop>%WIKITOOLNAME%</title>%TMPL:END%
 
+%{ Item2476: Put IE8 into compatibility mode to work around slow, erratic textarea }%
+%TMPL:DEF{"ie8compatibilitymode"}%%IF{"$EDIT_FORCE_IE8_COMPATIBILITYMODE='on'" then="<meta http-equiv=\"X-UA-Compatible\" content=\"IE=EmulateIE7\"/>"}%%TMPL:END%
+
 %TMPL:DEF{"head"}%<head>
 	%TMPL:P{"windowtitle"}%
+        %TMPL:P{context="edit" then="ie8compatibilitymode"}%
 	<meta http-equiv="Content-Type" content="text/html; charset=%CHARSET%" /> <meta name="robots" content="noindex" /> %HTTP_EQUIV_ON_VIEW%
     <meta name="scripturl" content="%SCRIPTURL%" />
     <meta name="scriptsuffix" content="%SCRIPTSUFFIX%" />
