Item8360: improvement to image handling
git-svn-id: http://svn.foswiki.org/trunk@5823 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/templates/pagebegin.tmpl
+++ b/core/lib/Foswiki/Configure/templates/pagebegin.tmpl
@@ -15,6 +15,7 @@
 	%INCLUDE{base.css}%
 	%INCLUDE{styles.css}%
 	%INCLUDE{pattern.css}%
+    %INCLUDE{jquery.simplemodal.css}%
 	</style>
 	<script language="JavaScript" type="text/javascript">
 	//<![CDATA[
@@ -22,6 +23,7 @@
 	var styleText = '<style type="text/css" media="all">/* toggling visibility of blocks; show all blocks by removing the style configureShowOneSection from the body tag */ body.configureShowOneSection .configureToggleSection { display:none; } body.configureShowOneSection .configureShowSection { display:block; }<\/style>';
 	document.write(styleText);
 	%INCLUDE{jquery-1.3.2.js}%
+    %INCLUDE{jquery.simplemodal.js}%
 	%INCLUDE{scripts.js}%
 	//]]>
 	</script>
