Item2397: prepare uniform display of extensions
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5826 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/pub/System/SkinTemplates/base.css
+++ b/core/pub/System/SkinTemplates/base.css
@@ -34,6 +34,10 @@
 .foswikiSmallish {
 	font-size:94%; /*S2*/
 }
+.foswikiLarge {
+	font-size:1.3em;
+	line-height:1.5em;
+}
 .foswikiBroadcastMessage {
 	background-color:#ff0;
 	padding:.25em .5em;
