--- a/core/lib/Foswiki/Configure/resources/pattern.css
+++ b/core/lib/Foswiki/Configure/resources/pattern.css
@@ -356,3 +356,8 @@ blockquote h2 {
 	color:#fff;
 	border-color:#ce5232 #f3ddd7 #f3ddd7 #ce5232;
 }
+.foswikiImage img {
+	padding:3px;
+	border-width:1px;
+	border-style:solid;
+}
