--- a/core/lib/Foswiki/Configure/templates/pagebegin.tmpl
+++ b/core/lib/Foswiki/Configure/templates/pagebegin.tmpl
@@ -15,7 +15,7 @@
 	%INCLUDE{base.css}%
 	%INCLUDE{styles.css}%
 	%INCLUDE{pattern.css}%
-    %INCLUDE{jquery.simplemodal.css}%
+    %INCLUDE{jquery.nyroModal.css}%
 	</style>
 	<script language="JavaScript" type="text/javascript">
 	//<![CDATA[
@@ -23,7 +23,7 @@
 	var styleText = '<style type="text/css" media="all">/* toggling visibility of blocks; show all blocks by removing the style configureShowOneSection from the body tag */ body.configureShowOneSection .configureToggleSection { display:none; } body.configureShowOneSection .configureShowSection { display:block; }<\/style>';
 	document.write(styleText);
 	%INCLUDE{jquery-1.3.2.js}%
-    %INCLUDE{jquery.simplemodal.js}%
+	%INCLUDE{jquery.nyroModal-1.5.5.min.js}%
 	%INCLUDE{scripts.js}%
 	//]]>
 	</script>
