--- a/TwistyPlugin/templates/twistyplugin.jquery.tmpl
+++ b/TwistyPlugin/templates/twistyplugin.jquery.tmpl
@@ -1,7 +1,12 @@
 %TMPL:INCLUDE{twistyplugin}%
 
-%TMPL:DEF{twisty:header}%<link rel="stylesheet" href="%PUBURLPATH%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.css" type="text/css" media="all" />
-<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.js"></script>
-<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswikiPref.js"></script>
-<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswikiStyles.js"></script>
+%TMPL:DEF{twisty:header:js}%
+%ADDTOHEAD{
+  "TWISTYPLUGIN::JS"
+  text="
+<script type='text/javascript' src='%PUBURLPATH%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.js'></script>
+<script type='text/javascript' src='%PUBURL%/%SYSTEMWEB%/JavascriptFiles/foswikiPref.js'></script>
+"
+  requires="JQUERYPLUGIN::FOSWIKI"
+}%
 %TMPL:END%
