Item176: optionally render galleries using a jQuery slimbox fronted
git-svn-id: http://svn.foswiki.org/trunk@6295 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/ImageGalleryPlugin/pub/System/ImageGalleryPlugin/style.css
+++ b/ImageGalleryPlugin/pub/System/ImageGalleryPlugin/style.css
@@ -11,4 +11,4 @@
 .igpNaviPrev{background-image:url(control-left.png);}.igpNaviNext:hover,
 .igpNaviNext{background-image:url(control-right.png);}.igpNaviLast:hover,
 .igpNaviLast{background-image:url(control-end.png);}.igpNaviFirst.igpNaviDisabled{background-image:url(control-start-gray.png);}.igpNaviPrev.igpNaviDisabled{background-image:url(control-left-gray.png);}.igpNaviNext.igpNaviDisabled{background-image:url(control-right-gray.png);}.igpNaviLast.igpNaviDisabled{background-image:url(control-end-gray.png);}.igpNaviDone:hover,
-.igpNaviDone{background-image:url(cross.png);}
+.igpNaviDone{background-image:url(cross.png);}.jqSlimbox .igpThumbNail{float:left;padding:5px;}
