Item8627: summary based on search terms
git-svn-id: http://svn.foswiki.org/trunk@6590 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/pub/System/SkinTemplates/base.css
+++ b/core/pub/System/SkinTemplates/base.css
@@ -75,3 +75,8 @@ a:hover .foswikiAccessKey {
 	margin:1em 0;
 	padding:1em;
 }
+.foswikiSummary em {
+	font-weight:bold;
+	font-style:normal;
+	color:#000;
+}
