--- a/core/templates/searchformat.tmpl
+++ b/core/templates/searchformat.tmpl
@@ -10,3 +10,13 @@
 %SPLIT%%REPEAT%%REPEAT%%SPLIT%%MAKETEXT{"Number of topics:"}% <b>%NTOPICS%</b><p />
 %SPLIT%
 %TMPL:END%
+
+%{ simple default pager }%
+
+%TMPL:DEF{SEARCH:pager_previous}%[[$previousurl][< Previous]]%TMPL:END%
+%TMPL:DEF{SEARCH:pager_next}%[[$nexturl][Next >]]%TMPL:END%
+%TMPL:DEF{SEARCH:pager}%
+---
+$previousbutton $sep Page $currentpage of $numberofpages $sep $nextbutton
+---
+%TMPL:END%
