Item8705: move EXPAND error messages into translatable messages
git-svn-id: http://svn.foswiki.org/trunk@6745 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -606,3 +606,6 @@
 %MAKETEXT{"Contact [_1] if you have any questions." args="%WIKIWEBMASTER%"}%
 
 %TMPL:END%
+%TMPL:DEF{"EXPAND_nomacro"}%%MAKETEXT{"EXPAND failed - no macro"}%%TMPL:END%
+%TMPL:DEF{"EXPAND_noscope"}%%MAKETEXT{"EXPAND failed - no such topic '%PARAM1%'"}% %TMPL:END%
+%TMPL:DEF{"EXPAND_noaccess"}%%MAKETEXT{"EXPAND failed - access to '%PARAM1%' denied"}%%TMPL:END%
