Item8695: support generic token mapping in ENCODE
git-svn-id: http://svn.foswiki.org/trunk@6746 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -606,6 +606,9 @@
 %MAKETEXT{"Contact [_1] if you have any questions." args="%WIKIWEBMASTER%"}%
 
 %TMPL:END%
+%TMPL:DEF{"ENCODE_bad_1"}%%MAKETEXT{"ENCODE failed - =type= cannot be used alongside =old= and =new= "}%%TMPL:END%
+%TMPL:DEF{"ENCODE_bad_2"}%%MAKETEXT{"ENCODE failed - both of =old= and =new= must be given"}%%TMPL:END%
+%TMPL:DEF{"ENCODE_bad_3"}%%MAKETEXT{"ENCODE failed - token '%PARAM1%' is repeated in =old= "}%%TMPL:END%
 %TMPL:DEF{"EXPAND_nomacro"}%%MAKETEXT{"EXPAND failed - no macro"}%%TMPL:END%
 %TMPL:DEF{"EXPAND_noscope"}%%MAKETEXT{"EXPAND failed - no such topic '%PARAM1%'"}% %TMPL:END%
 %TMPL:DEF{"EXPAND_noaccess"}%%MAKETEXT{"EXPAND failed - access to '%PARAM1%' denied"}%%TMPL:END%
