Item8732: add missing css class names
git-svn-id: http://svn.foswiki.org/trunk@6794 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -205,7 +205,7 @@
 
 <form action="%SCRIPTURLPATH{"register"}%" method="post">
 <input type="hidden" name="action" value="verify" size="20" />
-<input type="text" name="code" size="20" />
+<input type="text" name="code" size="20" class="foswikiInputField" />
 <input type="submit" class="foswikiSubmit" value=' %MAKETEXT{"Submit"}% ' />
 </form>
 
@@ -314,7 +314,7 @@
 
 <form action="%SCRIPTURLPATH{"register"}%" method="post">
 <input type="hidden" name="action" value="verify" size="20" />
-<input type="text" name="code" size="20" />
+<input type="text" name="code" class="foswikiInputField" size="20" />
 <input type="submit" class="foswikiSubmit" value=' %MAKETEXT{"Submit"}% ' />
 </form>
 
