Item2456: initial version of using icons.tmpl for %ICON{blank}% and other icons so the skin path and TopicTemplates _could_ be used
git-svn-id: http://svn.foswiki.org/trunk@6797 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/pub/System/SkinTemplates/base.css
+++ b/core/pub/System/SkinTemplates/base.css
@@ -68,6 +68,16 @@ a:hover .foswikiAccessKey {
 	border-width:1px;
 	border-style:solid;
 }
+.foswikiIcon {
+	border-width:0;
+	margin:0;
+	padding:0;
+	vertical-align:middle;
+}
+.foswikiIcon img {
+	border-width:0;
+	align: top;
+}
 .foswikiPreviewArea {
 	border-width:1px;
 	border-style:solid;
