Item8503: explanatory message for the case where a validation failure is expected after a go-back after a missing-mandatory-fields save veto.
git-svn-id: http://svn.foswiki.org/trunk@6804 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -326,7 +326,10 @@
 
 %MAKETEXT{"The required field [_1] was not filled in." args="*<noautolink>%PARAM1%</noautolink>*"}%
 
-%MAKETEXT{"Go back in your browser and insert information for all mandatory fields."}%
+%MAKETEXT{"Go back in your browser and insert values for all mandatory fields before saving again"}%%IF{"{Validation}{Method}!='none'" then="%MAKETEXT{"
+(just select 'OK' when you are asked to confirm your save)
+"}%"}%
+
 %TMPL:END%
 %TMPL:DEF{"no_form_def"}%
 ---+++ %MAKETEXT{"Form Definition [_1] missing" args="%PARAM1%.<nop>%PARAM2%"}%
