Item2456: add non-16px icons to icons.tmpl so that the users don't have to use longwinded html with ICONURL, and start to clean up DocumentGraphics
git-svn-id: http://svn.foswiki.org/trunk@6819 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/FamFamFamContrib/templates/icons.tmpl
+++ b/FamFamFamContrib/templates/icons.tmpl
@@ -7,7 +7,7 @@
 
 
 %TMPL:DEF{"iconurl:book"}%%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/book.png%TMPL:END%
-%TMPL:DEF{"icoalt:book"}%Book%TMPL:END%
+%TMPL:DEF{"iconalt:book"}%Book%TMPL:END%
 %TMPL:DEF{"icon:book"}%<span class="foswikiIcon"><img src="%TMPL:P{"iconurl:book"}%" width="16px" height="16px" alt="%TMPL:P{"iconalt:book"}%" /></span>%TMPL:END%
 
 %{ special icons which make little sense to do as actual graphics }%
@@ -20,3 +20,29 @@
 %{ needs tweaking to get the 'm' and 'p' in the right place }%
 %TMPL:DEF{"icon:monospace"}%<span class="foswikiIcon"><div class="inner" style="width:14px;height:14px;border:1px solid gray;background:white;display:inline-block;font-family:monospace;">m</div></span>%TMPL:END%
 %TMPL:DEF{"icon:proportional"}%<span class="foswikiIcon"><div class="inner" style="width:14px;height:14px;border:1px solid gray;background:white;display:inline-block;font-family:serif;">p</div></span>%TMPL:END%
+
+
+%{ non-16px sized icons }%
+%TMPL:DEF{"icon:more-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/bullet_go.png" width="13px" height="13px" alt="Read more" /></span>%TMPL:END%
+%TMPL:DEF{"icon:photo"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/photo.png" width="13px" height="10px" alt="Photo" /></span>%TMPL:END%
+%TMPL:DEF{"icon:video"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkCompanion1Icons/dvd_start.png" width="13px" height="10px" alt="Video" /></span>%TMPL:END%
+%TMPL:DEF{"icon:search-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/page_find.png" width="13px" height="13px" alt="Search" /></span>%TMPL:END%
+%TMPL:DEF{"icon:uweb_bo12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/uweb_bo12.png" width="12px" height="12px" alt="Edit" /></span>%TMPL:END%
+%TMPL:DEF{"icon:uweb_m12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/uweb_m12.png" width="12px" height="12px" alt="Edit" /></span>%TMPL:END%
+%TMPL:DEF{"icon:uweb_o12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/uweb_o12.png" width="12px" height="12px" alt="Edit" /></span>%TMPL:END%
+%TMPL:DEF{"icon:changes-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/page_white_stack.png" width="13px" height="13px" alt="Changes" /></span>%TMPL:END%
+%TMPL:DEF{"icon:rss-feed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/feed.png" width="36px" height="14px" alt="RSS feed" /></span>%TMPL:END%
+%TMPL:DEF{"icon:xml-feed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/XML_icon.png" width="36px" height="14px" alt="XML feed" /></span>%TMPL:END%
+%TMPL:DEF{"icon:new"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/new.png" width="30px" height="16px" alt="New" /></span>%TMPL:END%
+%TMPL:DEF{"icon:todo"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/todo.png" width="37px" height="16px" alt="TODO" /></span>%TMPL:END%
+%TMPL:DEF{"icon:updated"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/updated.png" width="55px" height="16px" alt="UPDATED" /></span>%TMPL:END%
+%TMPL:DEF{"icon:done"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/done.png" width="37px" height="16px" alt="Done" /></span>%TMPL:END%
+%TMPL:DEF{"icon:closed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/closed.png" width="48px" height="16px" alt="Closed" /></span>%TMPL:END%
+%TMPL:DEF{"icon:flag-gray-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamFoswikiExtras/flag_gray_small.png" width="13px" height="13px" alt="Flag" /></span>%TMPL:END%
+%TMPL:DEF{"icon:tablesortdiamond"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/bullet_black.png" width="11px" height="13px" alt="Sort table" /></span>%TMPL:END%
+%TMPL:DEF{"icon:tablesortdown"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/bullet_arrow_down.png" width="11px" height="13px" alt="Sort table descending" /></span>%TMPL:END%
+%TMPL:DEF{"icon:tablesortup"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/bullet_arrow_up.png" width="11px" height="13px" alt="Sort table ascending" /></span>%TMPL:END%
+%TMPL:DEF{"icon:toggleopen-mini"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/bullet_toggle_plus.png" width="7px" height="9px" alt="Open" /></span>%TMPL:END%
+%TMPL:DEF{"icon:toggleclose-mini"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/bullet_toggle_minus.png" width="7px" height="9px" alt="Close" /></span>%TMPL:END%
+%TMPL:DEF{"icon:web-bg-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/folder_edit.png" width="13px" height="13px" alt="Web" /></span>%TMPL:END%
+
