Item8746: moved default webtopiclist into DefaultSkin
git-svn-id: http://svn.foswiki.org/trunk@6827 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -121,3 +121,11 @@
 %{ icon:image - uses double quotes required for legacy reasons :/  }%
 %TMPL:DEF{"icon:image"}%<span class="foswikiIcon"><img src="%URL%" width="%WIDTH%" height="%HEIGHT%" alt="%ALT%" /></span>%TMPL:END%
 %TMPL:DEF{"icon:image_singlequote"}%<span class='foswikiIcon'><img src='%URL%' width='%WIDTH%' height='%HEIGHT%' alt='%ALT%' /></span>%TMPL:END%
+
+%{ support for default skin's webtopiclist }%
+%TMPL:DEF{"defaultwebtopiclist"}%[[WebChanges][Changes]] %SEP% [[WebIndex][Index]] %SEP% [[WebSearch][Search]] %SEP% Go <input type="text" name="topic" size="16" />%TMPL:END%
+%TMPL:DEF{"webtopiclist"}%%IF{"defined 'WEBTOPICLIST'" 
+  then="$percntWEBTOPICLIST$percnt" 
+  else="$percntTMPL:P{\"defaultwebtopiclist\"}$percnt"
+}%%TMPL:END%
+
