--- a/core/templates/search.tmpl
+++ b/core/templates/search.tmpl
@@ -1,7 +1,7 @@
 %{ This is a default template }%%TMPL:INCLUDE{"view"}%
 
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"(search results)"}%%TMPL:END%
-%TMPL:DEF{"webaction"}% %WEBTOPICLIST% %TMPL:END%
+%TMPL:DEF{"webaction"}% %TMPL:P{"webtopiclist"}% %TMPL:END%
 
 %TMPL:DEF{"topicactionbuttons"}%%MAKETEXT{"(search results)"}%%TMPL:END%
 
