--- a/core/templates/view.plain.tmpl
+++ b/core/templates/view.plain.tmpl
@@ -1,7 +1,7 @@
 %{ This is a default template }%%TMPL:INCLUDE{"foswiki"}%
 
 %TMPL:DEF{"titleaction"}% %REVTITLE% %TMPL:END%
-%TMPL:DEF{"webaction"}% %WEBTOPICLIST% %TMPL:END%
+%TMPL:DEF{"webaction"}% %TMPL:P{"webtopiclist"}% %TMPL:END%
 %TMPL:DEF{"form"}%
 %META{"form"}%%TMPL:END%
 
