--- a/core/templates/view.tmpl
+++ b/core/templates/view.tmpl
@@ -3,7 +3,7 @@
 %TMPL:INCLUDE{"viewtopicactionbuttons"}%
 
 %TMPL:DEF{"titleaction"}% %REVTITLE% %TMPL:END%
-%TMPL:DEF{"webaction"}% %WEBTOPICLIST% %TMPL:END%
+%TMPL:DEF{"webaction"}% %TMPL:P{"webtopiclist"}% %TMPL:END%
 %TMPL:DEF{"pagetitlestylewrapper"}%%TMPL:END%
 
 %TMPL:DEF{"form"}%%META{"form"}%%TMPL:END%
