--- a/core/templates/searchformat.tmpl
+++ b/core/templates/searchformat.tmpl
@@ -1,7 +1,7 @@
 %{ This is a default template }%%TMPL:INCLUDE{"foswiki"}%
 
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"(search result)"}% %TMPL:END%
-%TMPL:DEF{"webaction"}% %WEBTOPICLIST% %TMPL:END%
+%TMPL:DEF{"webaction"}% %TMPL:P{"webtopiclist"}% %TMPL:END%
 %TMPL:DEF{"topicaction"}%%TMPL:END%
 
 
