Item8768: implement SimplifySearchTemplates feautre - remove SPLIT and REPEAT mess and replace with SEARCH:format etc - default to using SPLIT&REPEAT if they are present in the skin though
git-svn-id: http://svn.foswiki.org/trunk@6921 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/templates/search.pattern.tmpl
+++ b/PatternSkin/templates/search.pattern.tmpl
@@ -1,23 +1,20 @@
-%TMPL:INCLUDE{"view"}%
-%TMPL:INCLUDE{"searchbase"}%
+%TMPL:INCLUDE{"search"}%
+%TMPL:INCLUDE{"searchformat"}%
 
 
-%TMPL:DEF{"topicaction"}%%TMPL:END%
+%TMPL:DEF{SEARCH:format}%<div class="patternSearchResult">
+<div class="foswikiTopRow">
+<div class="foswikiLeft"><a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%"><b>%TOPICNAME%</b></a></div>
+<div class="foswikiRight foswikiSRAuthor"> %AUTHOR%</div>
+<div class="foswikiRight foswikiSRRev">%REVISION% - <a href="%SCRIPTURLPATH{"rdiff"}%/%WEB%/%TOPICNAME%" rel='nofollow'>%TIME%</a>&nbsp;</div>
+<br class="foswikiClear" /></div><!--/foswikiTopRow-->
+<div class="foswikiBottomRow">
+<div class="foswikiSummary foswikiGrayText">%TEXTHEAD%</div><!--/foswikiSummary-->
+</div><!--/foswikiBottomRow-->
+</div><!--/patternSearchResult-->%TMPL:END%
 
+%TMPL:DEF{SEARCH:footer}%%TMPL:END%
 
-
-%TMPL:DEF{"titleaction"}%%MAKETEXT{"(search results)"}% %TMPL:END%
-
-
-
-%TMPL:DEF{"result"}%<div class="patternSearchResult"><div class="foswikiTopRow"><div class="foswikiLeft"><a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%"><b>%TOPICNAME%</b></a></div><div class="foswikiRight foswikiSRAuthor"> %AUTHOR%</div><div class="foswikiRight foswikiSRRev">%REVISION% - <a href="%SCRIPTURLPATH{"rdiff"}%/%WEB%/%TOPICNAME%" rel='nofollow'>%TIME%</a>&nbsp;</div><br class="foswikiClear" /></div><!--/foswikiTopRow--><div class="foswikiBottomRow"><div class="foswikiSummary foswikiGrayText">%TEXTHEAD%</div><!--/foswikiSummary-->
-</div><!--/foswikiBottomRow--></div><!--/patternSearchResult-->%TMPL:END%
-
-
-
-%TMPL:DEF{"content"}%%SPLIT%%TMPL:P{"searched"}%
-%SPLIT%%TMPL:P{"header"}%%REPEAT%%TMPL:P{"result"}%%REPEAT%%SPLIT%%TMPL:P{"count"}%%SPLIT%%TMPL:END%
-
-
+%TMPL:DEF{count_spacer}%%TMPL:END%
 
 %TMPL:DEF{"header:style:backgroundcolor"}%style="background-color:%WEBBGCOLOR%"%TMPL:END%
