--- a/PatternSkin/templates/searchmeta.pattern.tmpl
+++ b/PatternSkin/templates/searchmeta.pattern.tmpl
@@ -1,2 +1,4 @@
-%SPLIT%%SPLIT%%REPEAT%<a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%">%TOPICNAME%</a> %REPEAT%%SPLIT%%SPLIT%
-<!--Dummy tail-->
+%{ I think this one is redundant - its identical to the default skin version. }%
+%TMPL:INCLUDE{"searchformat"}%
+
+%TMPL:DEF{SEARCH:format}%<a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%">%TOPICNAME%</a> %TMPL:END%
