--- a/PatternSkin/templates/searchbookview.pattern.tmpl
+++ b/PatternSkin/templates/searchbookview.pattern.tmpl
@@ -1,5 +1,4 @@
-%TMPL:INCLUDE{"search"}%
+%TMPL:INCLUDE{searchbookview}%
 
 
-
-%TMPL:DEF{"result"}%<div class="patternBookView"><div class="foswikiTopRow"><a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%"><b>%TOPICNAME%</b></a> (<a href="%SCRIPTURLPATH{"rdiff"}%/%WEB%/%TOPICNAME%" rel='nofollow'>%TIME%</a> - %REVISION% - %AUTHOR%)</div><!--/foswikiTopRow--><div class="foswikiBottomRow">%TEXTHEAD%</div><!--/foswikiBottomRow--></div><!--/patternBookView-->%TMPL:END%
+%TMPL:DEF{SEARCH:format}%<div class="patternBookView"><div class="foswikiTopRow"><a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%"><b>%TOPICNAME%</b></a> (<a href="%SCRIPTURLPATH{"rdiff"}%/%WEB%/%TOPICNAME%" rel='nofollow'>%TIME%</a> - %REVISION% - %AUTHOR%)</div><!--/foswikiTopRow--><div class="foswikiBottomRow">%TEXTHEAD%</div><!--/foswikiBottomRow--></div><!--/patternBookView-->%TMPL:END%
