--- a/core/templates/searchbookview.tmpl
+++ b/core/templates/searchbookview.tmpl
@@ -1,8 +1,9 @@
-%{ This is a default template }%%TMPL:INCLUDE{"search"}%
+%{ This is a default template }%
+%TMPL:INCLUDE{"search"}%
 
 %TMPL:DEF{"titleaction"}%%MAKETEXT{"(book view)"}% %TMPL:END%
 
-%TMPL:DEF{"repeatedsearchblock"}%
+%TMPL:DEF{SEARCH:format}%
 %REPEAT%<table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tr bgcolor="%WEBBGCOLOR%">
   <td width="60%"><h1><a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%">%TOPICNAME%</a> &nbsp;</h1></td>
