Item8787: CSS validation error related to icons
git-svn-id: http://svn.foswiki.org/trunk@6963 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/pub/System/SkinTemplates/base.css
+++ b/core/pub/System/SkinTemplates/base.css
@@ -76,7 +76,7 @@ a:hover .foswikiAccessKey {
 }
 .foswikiIcon img {
 	border-width:0;
-	align: top;
+	vertical-align:top;
 }
 .foswikiPreviewArea {
 	border-width:1px;
