Item8789: provide default style for images
git-svn-id: http://svn.foswiki.org/trunk@6969 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/pub/System/SkinTemplates/default.css
+++ b/core/pub/System/SkinTemplates/default.css
@@ -241,6 +241,10 @@ a:visited .foswikiAccessKey,
 a:hover .foswikiAccessKey {
 	color:inherit;
 }
+img {
+	border:0;
+	vertical-align:text-bottom;
+}
 .foswikiImage img {
 	border-color:#eee;
 	background-color:#fff;
